src/App.css
/* font imported from fonts.google.com */
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap");

/* colors */
:root {
  --color-primary: #111;
  --color-secondary: #44ab96;
  --color-tertiary: #ff5678;
  --color-background: #fafafa;
}

/* apply to all elements */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

/* body element */
body {
  max-width: 1024px;
  margin: 0 auto;
  font-size: 16px;
  font-family: "Ubuntu", sans-serif;
  color: var(--color-primary);
  background-color: var(--color-background);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* background-image:url("./assets/bg.jpg"); nahi jam ra accha bhai */
  


}

/* removing anchor tag styles */
a,
a:hover,
a:focus,
a:active {
  text-decoration: none;
  color: inherit;
}

h2 {
  margin: 1.4rem 0 0.8rem 0;
}

.App {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  padding: 0.4rem 1rem;
}

header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.4rem 0.6rem;
  text-align: center;
  background-color: var(--color-background);
}

header > .brandName {
  font-size: 2rem;
  font-weight: 700;
  cursor: pointer;
}

header > nav > ul {
  flex: 1;
  margin-top: 0.8rem;
  list-style: none;
  display: flex;
  justify-content: space-around;
}

.activeSection {
  font-weight: 700;
  color: var(--color-secondary);
}

.home {
  min-height: 75vh;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1.2rem;
}

.home > .heroText {
  display: flex;
  flex-direction: column;
  width: fit-content;
  text-align: left;
  margin-top: 35px;
}
/* header{} */
.home > .heroText > .headTitle {
  font-size: 1.6rem;
}
.home > .heroText > .title {
  font-size: 1.8rem;
  font-weight: 700;
}
.subTitle {
  font-size: 1rem;
  margin-top: 25px;
  margin-bottom: 15px;
}
.subTitle > #textCode {
  color: var(--color-secondary);
}

.subTitle > #textMelody {
  color: var(--color-tertiary);
}

.socialHandles {
  margin-top: 1.2rem;
  display: flex;
  gap: 0.8rem;
}
.socialHandleIcon:hover,
.socialHandleIcon:focus {
  fill: var(--color-tertiary);
  color: var(--color-tertiary);
  transition: all 0.1s;
}

.aboutSection {
  display: flex;
  flex-direction: column;
}
/* myaddition */
#skills {
  margin-top: 45px;
}
/* closes */

#skills > ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
}

#skills > ul > li {
  padding: 0.4rem 0.6rem;
  background-color: var(--color-primary);
  color: var(--color-background);
  border-radius: 0.4rem;
}
#projects{
  margin-top: 75px;
}
#grpprojects{
  margin-top: 20px;
}
.projectCard {
  display: flex;
  flex-direction: column;
}
.projectCardsContainer {
  width: 100%;
  overflow-x: scroll;
  display: flex;
  gap: 1.2rem;
  padding-bottom: 1rem;
}
.projectCard > img {
  width: 15rem;
  border-radius: 0.8rem;
}
.projectCard > img:hover {
  width: 16rem;
  border-radius: 0.9rem;
}
.projectCard > .title {
  margin-top: 0.4rem;
  font-size: 1.2rem;
  font-weight: 700;
}
.projectCard > .subtitle {
  font-weight: 200;
}
.projectCard > .desc {
  margin-top: 0.4rem;
}
.projectCard > .teckStack {
  margin-top: 0.4rem;
  list-style-type: none;
  display: inline-flex;
  gap: 0.4rem;
}
.projectCard > .links {
  margin-top: 0.8rem;
  display: inline-flex;
  gap: 1rem;
  font-weight: 700;
}

footer {
  margin: 0 auto;
  padding: 3rem 0 1rem 0;
}
.mobileMenuList {
  font-size: 20px;
  font-weight: bolder;
}
.catch{
  font-size: 1rem;
  font-weight: bolder;
}
/* media queries for larger screens */
/* @media screen and (min-width: 768px) {
  html {
    font-size: 20px;
  }
  header {
    flex-direction: row;
  }
  header > nav > ul {
    gap: 2rem;
  } */
  /* .home {
    flex-direction: row-reverse;
    justify-content: space-between;
  }
  .home > img {
    width: 50%;
  }
  .home > .heroText > .headTitle {
    font-size: 2rem;
  }
  .home > .heroText > .title {
    font-size: 2rem;
    font-weight: 700;
  }
} */

